@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-02-13 Thu 15:15 -->
+<!-- 2025-02-14 Fri 00:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-02-13 15:09:14</i></td>
+<td class="org-left"><i>2025-02-14 00:16:27</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-02-13 15:15:29</i></td>
+<td class="org-left"><i>2025-02-14 00:16:30</i></td>
 </tr>
 </tbody>
 </table>
@@ -340,6 +340,9 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>heart2025.cpp</li>
 <li>duck.cpp</li>
 <li>heartFrac.cpp</li>
+<li>feather.cpp</li>
+<li>mandelbrot_meanOrbit.cpp</li>
+<li>simone_attractor.cpp</li>
 </ul></li>
 <li>Updated
 <ul class="org-ul">
